--- a/index.html
+++ b/index.html
@@ -31,14 +31,24 @@
 	<div class="content">
 	<div id="onload"><p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput.gif"></p></div>
 	<div id="Examples">
-		<p>Up Close: <img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput0.jpg"></p>
-		<p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput0.jpg"> </p>
+		<p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput0.jpg"><br><br>
+		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput4.jpg"><br><br>
+		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput6.jpg">
+		</p>
+		<p>169 studies in a single mouse click:<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput0.jpg">
+		And again! <img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput1.jpg">
+		<br><br>
+		And again!<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput2.jpg">
+		</p>
+
 	</div>
 	<div id="Github">
 		<p>See more at <a href="https://github.com/kstolzenberg/Facader">Github!</a></p>
 	</div>
 	<div id="About">
-		<p>Façader is a tool to rapidly evaluate quick studies of building elevations.  Façader is written in Processing and uses intelligent 2D objects with collision detection to create many combinations from several basic scenarios.</p>
+		<p>Façader is a design tool to rapidly evaluate potential studies of building elevations. This script considers exterior cladding module and color, window size and location, and entry level height. Façader is written in Processing and uses intelligent 2D objects with collision detection to create many combinations from several base scenarios.</p>
+		<p>The contemporary future of architecture is less about explicitly creating form and more about creating systems of control for form to occur.  Parametricism is new process forward that is congruent with any shape or form. The role of the Architect has shifted towards catalyst rather than pure creator.</p>
+		<p>Developed by Karen Stolzenberg</p>
 	</div>
 	</div>
 
