+final content tweaks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<ul id="navTabs">
 	<li><a href="#onload"></a></li>
 	<li><a href="#Examples">Examples</a></li>
-	<li><a href="#Github">Github</a></li>
+	<li><a href="#Process">Process</a></li>
 	<li><a href="#About">About</a></li>
 	</ul>
 
@@ -38,17 +38,23 @@
 		<p>169 studies in a single mouse click:<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput0.jpg">
 		And again! <img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput1.jpg">
 		<br><br>
-		And again!<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput2.jpg">
+		And again again!<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput2.jpg">
 		</p>
 
 	</div>
-	<div id="Github">
+	<div id="Process">
+		<p>
+		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error.jpg"> <br>
+		Elements without a host <br>Endless vertical access
+		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error2.jpg">
+		</p>
 		<p>See more at <a href="https://github.com/kstolzenberg/Facader">Github!</a></p>
 	</div>
 	<div id="About">
-		<p>Façader is a design tool to rapidly evaluate potential studies of building elevations. This script considers exterior cladding module and color, window size and location, and entry level height. Façader is written in Processing and uses intelligent 2D objects with collision detection to create many combinations from several base scenarios.</p>
-		<p>The contemporary future of architecture is less about explicitly creating form and more about creating systems of control for form to occur.  Parametricism is new process forward that is congruent with any shape or form. The role of the Architect has shifted towards catalyst rather than pure creator.</p>
-		<p>Developed by Karen Stolzenberg</p>
+		<p>Façader is a design tool to rapidly evaluate preliminary studies of building elevations. This tool considers cladding module, cladding color, fenestration size, fenestration location, and entry level height. Façader is written in Processing and uses intelligent 2D objects with collision detection.  The goal of Façader is to reduce the amount of time spent in schematic design by testing many combinations from several base scenarios.</p>
+		<p>Future implementations could include simple user input, machine-learning output, packing algorithms and physics simulators. </p>
+		<p>The future of architecture is less about explicitly creating form and more about creating systems of control for form to occur.  Beyond blobs, parametricism ought to be considered as a legitimate design process. The role of the Architect is shifting towards catalyst and away from pure creator.</p>
+		<p>Developed by <a href="http://karenstolzenberg.com">Karen Stolzenberg</a></p>
 	</div>
 	</div>
 
