--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	</div>
 	<div id="Process">
 		<p>
-		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error.jpg"> <br>
-		Elements without a host <br>Endless vertical access
+		<img class ="tiny"src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error.jpg">
+		<p>Elements without a host. Endless vertical access. It is easy to generate shapes.  It is much more difficult to infer form from shapes, to control form and to add object-oriented behavior. The basic object creation took 20% of the developement time while writing the collision checker took 80% of the total development time. </p>
+		<p>See more at <a href="https://github.com/kstolzenberg/Facader">Github.</a></p>
 		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error2.jpg">
 		</p>
-		<p>See more at <a href="https://github.com/kstolzenberg/Facader">Github!</a></p>
 	</div>
 	<div id="About">
 		<p>Façader is a design tool to rapidly evaluate preliminary studies of building elevations. This tool considers cladding module, cladding color, fenestration size, fenestration location, and entry level height. Façader is written in Processing and uses intelligent 2D objects with collision detection.  The goal of Façader is to reduce the amount of time spent in schematic design by testing many combinations from several base scenarios.</p>
