--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript">
 		$(function() {
-			$( "#tabs" ).tabs();
+			$( "#tabs" ).tabs({
+				beforeActivate: function (event, ui){
+					window.location.hash = ui.newPanel.selector;
+				}
+			});
 		});
 	</script>
 </head>
@@ -23,14 +27,14 @@
 <div id="tabs">
 	<ul id="navTabs">
 	<li><a href="#onload"></a></li>
-	<li><a href="#Examples">Examples</a></li>
-	<li><a href="#Process">Process</a></li>
-	<li><a href="#About">About</a></li>
+	<li><a href="#examples">Examples</a></li>
+	<li><a href="#process">Process</a></li>
+	<li><a href="#about">About</a></li>
 	</ul>
 
 	<div class="content">
 	<div id="onload"><p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/boutput.gif"></p></div>
-	<div id="Examples">
+	<div id="examples">
 		<p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput0.jpg"><br><br>
 		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput4.jpg"><br><br>
 		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/loutput6.jpg">
@@ -42,17 +46,19 @@
 		</p>
 
 	</div>
-	<div id="Process">
-		<p>
-		<img class ="tiny"src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error.jpg">
-		<p>Elements without a host. Endless vertical access. It is easy to generate shapes.  It is much more difficult to infer form from shapes, to control form and to add object-oriented behavior. The basic object creation took 20% of the developement time while writing the collision checker took 80% of the total development time. </p>
-		<p>See more at <a href="https://github.com/kstolzenberg/Facader">Github.</a></p>
-		<img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error2.jpg">
+	<div id="process">
+		<p class="tiny">
+		<img class = "tiny" src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error%203.jpeg">
+		<img class = "tiny" src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error%204.jpeg">
+		<img class ="tiny" src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error.jpg">
+		</p>
+		<p>Elements without a host. Endless vertical access. It is easy to generate shapes.  It is much more difficult to infer form from shapes, to control form and to add object-oriented behavior. The basic object creation took 20% of the time while writing the collision checker took 80% of the total development time. See more at <a href="https://github.com/kstolzenberg/Facader">Github!</a></p>
+		<p><img src="https://raw.githubusercontent.com/kstolzenberg/facader/gh-pages/error2.jpg">
 		</p>
 	</div>
-	<div id="About">
+	<div id="about">
 		<p>Façader is a design tool to rapidly evaluate preliminary studies of building elevations. This tool considers cladding module, cladding color, fenestration size, fenestration location, and entry level height. Façader is written in Processing and uses intelligent 2D objects with collision detection.  The goal of Façader is to reduce the amount of time spent in schematic design by testing many combinations from several base scenarios.</p>
-		<p>Future implementations could include simple user input, machine-learning output, packing algorithms and physics simulators. </p>
+		<p>Further implementations could include simple user input, machine-learning output, packing algorithms and physics simulators. </p>
 		<p>The future of architecture is less about explicitly creating form and more about creating systems of control for form to occur.  Beyond blobs, parametricism ought to be considered as a legitimate design process. The role of the Architect is shifting towards catalyst and away from pure creator.</p>
 		<p>Developed by <a href="http://karenstolzenberg.com">Karen Stolzenberg</a></p>
 	</div>
